# flip-napari

./: .gitignore  LICENSE  README.md  pyproject.toml
src/flip_napari/: __init__.py  _widget.py  napari.yaml  old_widget.py  run_analysis.py  segment_nuclei.py  utils.py
src/flip_napari/modules/: segmentation.py  utils.py
